--- a/css/style.scss
+++ b/css/style.scss
@@ -1076,3 +1076,12 @@ footer {
     width: 50vw;
     position: absolute;
 }
+
+
+////others
+.tns-nav{
+    display: none;
+}
+.tns-controls{
+    display: none;
+  }
